# tams_glove

./: .gitignore
cad/: glove.blend
data/: tweezers.csv
pcb/: camera.brd  camera.sch  node.brd  node.sch  router.brd  router.sch  tactile.brd  tactile.sch
ros/glovewise/: CMakeLists.txt  package.xml  setup.py
ros/glovewise/models/: bonehand20.dae  bonehand21.dae  bonehand22.dae  bonehand35x.dae  bonehand37.dae  bonehand37s.dae
ros/glovewise/scripts/: calib_board  calib_detect  calib_solve  calib_test  filter_compress  hand_detector  model  plot3  proc  proc_dump  proc_glove_detect  proc_glove_mbench  proc_glove_mesh  proc_glove_mplot  proc_glove_render  proc_glove_solve  proc_obj  proc_obj_detect  proc_obj_solve  proc_obj_track  proc_opose  proc_pca  proc_pcaview  proc_tactile  proc_view  proc_visualize
ros/glovewise/shaders/: mask_fs.glsl  mask_vs.glsl
ros/glovewise/src/: python.cpp
ros/glovewise/src/glovewise/: __init__.py  camcalib.py  cameramodel.py  glovefusion.py  glovemodel.py  gloverender.py  ik.py  imagebag.py  mapping.py  multicam.py  observations.py  paths.py  tactile.py  tracking.py  utils.py  vizbag.py
ros/mittenwire/: CMakeLists.txt  package.xml  setup.py
ros/mittenwire/cfg/: Hub.cfg
ros/mittenwire/include/: camera.hpp  hub.hpp  imagepublisher.hpp  log.hpp  master.hpp  message.hpp  messages.hpp  node.hpp  object.hpp  packet.hpp  superspeed.hpp  utils.hpp
ros/mittenwire/msg/: GloveStatus.msg  ImpedanceMatrix.msg
ros/mittenwire/scripts/: cam_off  cam_on  dump  glove  glove2  glovenet  glovenet2  gloveview  gloveviz  power  rec  record  reset  serial  snap  tacfilter  tacview  view
ros/mittenwire/src/: camera.cpp  hub.cpp  imagepublisher.cpp  master.cpp  message.cpp  node.cpp  object.cpp  packet.cpp  python.cpp  superspeed.cpp  utils.cpp
ros/mittenwire/src/mittenwire/: __init__.py  app.py  app_rec.py  glove.py  gui.py  image.py  messages.py  mosaic.py  net.py  profiler.py
unwrap/: makefile
unwrap/src/: box.hpp  contour.hpp  main.cpp  mesh.hpp  obj.hpp  pack.hpp  svg.hpp  unwrap.h  unwrap.hpp
vlsi/: args_equal.py  makefile
vlsi/firmware/: clock.hpp  flash.hpp  gpio.hpp  hx711.hpp  icm42605.hpp  ina219.hpp  led.hpp  main_cam.cpp  main_hub.cpp  main_radio.cpp  main_tactile.cpp  messages.hpp  mt9p001.hpp  net.hpp  nrf24.hpp  pca9536.hpp  sccb.hpp  serial.hpp  start.s  thermometer.hpp  wire.hpp
vlsi/hardware/: adc.v  async_fifo.v  async_fifo_tb.v  clock.v  cpu.v  dac.v  debounce.v  debounce_tb.v  event_counter.v  fifo.v  fifo2_tb.v  fifo_tb.v  gpio.v  gpio_core.v  jtag.v  led_controller.v  led_ws2812b.v  led_ws2812b_tb.v  memory.v  net_ecp5.v  net_rx.v  net_tb.v  net_tx.v  oram4.v  packet_buffer.v  packet_buffer_tb.v  packet_device.v  packet_fifo.v  packet_framer.v  packet_framer_tb.v  packet_mux.v  packet_mux_tb.v  packet_prefixer.v  packet_prefixer_tb.v  packet_rx_device.v  packet_splitter.v  packet_splitter_tb.v  ringbuffer.v  ringbuffer_half_tb.v  ringbuffer_tb.v  (+33 more)
